assets/css/style.css
/* ... */
/* *-------------------- Home Section */

.landing-title a,
h1,
h3 {
  font-family: "Work Sans", sans-serif;
  font-weight: 300;
  text-decoration: none;
  color: #fafafa;
  transition: color 0.35s ease-in-out;
  -moz-transition: color 0.35s ease-in-out;
  -webkit-transition: color 0.35s ease-in-out;
  -o-transition: color 0.35s ease-in-out;
}

.landing-title h1:hover {
  color: #669999;
}

.landing-title h3:hover {
  color: #669999;
}

/* *-------------------- About Section */

.about-text {
  font-family: "Work Sans", sans-serif;
  font-size: 0.8rem;
  font-weight: 300;
  color: #fafafa;
  margin: 250px 20px 85px 20px;
}

/* todo: edit pics for each media query */
/* *-------------------- Gallery Section */

.carousel-item {
  background-repeat: no-repeat;
  background-size: cover;
  width: 100vw;
  height: 100vh;
}

.carousel-caption h5 {
  font-family: "Work Sans", sans-serif;
  font-size: 2rem;
  font-weight: 300;
  color: rgba(250, 250, 250, 0.5);
  margin-bottom: 50px;
}

.gallery-image-1 {
  background-image: url(../img/gallery/kirsten/kirsten-xs.jpg);
}
.gallery-image-2 {
  background-image: url(../img/gallery/boots/boots-xs.jpg);
}
.gallery-image-3 {
  background-image: url(../img/gallery/sunglasses/sunglasses-xs.jpg);
}
.gallery-image-4 {
  background-image: url(../img/gallery/mustang/mustang-xs.jpg);
}
.gallery-image-5 {
  background-image: url(../img/gallery/logs-in-snow/logs-in-snow-xs.jpg);
}
.gallery-image-6 {
  background-image: url(../img/gallery/snowy-horizon/snowy-horizon-xs.jpg);
}

/* *-------------------- Services Section */

.services-container {
  height: 60vh;
  width: 100%;
  position: absolute;
  top: 50%;
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.service-option {
  margin: 5px 0;
  padding: 0 20px;
}

.service-title {
  font-family: "Work Sans", sans-serif;
  font-weight: 100;
  font-size: 3rem;
  color: rgba(250, 250, 250, 0.5);
  position: relative;
  top: 25%;
  -ms-transform: translateY(-25%);
  transform: translateY(-25%);
}

.service-image {
  background-position: center center;
  height: 100%;
  background-repeat: no-repeat;
  background-size: cover;
}

/* todo: need to add media queries for larger pics??? */
.portrait {
  background-image: url(../img/services/portrait-sm.jpg);
}
.product {
  background-image: url(../img/services/product-sm.jpg);
}
.automotive {
  background-image: url(../img/services/automotive-sm.jpg);
}

/* *-------------------- Contact Section */

.form-title {
  font-family: "Work Sans", sans-serif;
  font-weight: 100;
  font-size: 4rem;
  color: rgba(250, 250, 250, 1);
}

.btn-submit {
  color: #fafafa;
  background-color: #669999;
  border: #fafafa;
}

/* *-------------------- Footer */

.footer-text {
  font-size: 0.8rem;
  font-family: "Work Sans", sans-serif;
  font-weight: 300;
  color: #fafafa;
  text-decoration: none;
}

footer i {
  color: #fafafa;
  margin: 0 7px;
}

.contact-link a i,
.talk {
  color: #fafafa;
  transition: color 0.35s ease-in-out;
  -moz-transition: color 0.35s ease-in-out;
  -webkit-transition: color 0.35s ease-in-out;
  -o-transition: color 0.35s ease-in-out;
}

.contact-link a i:hover,
.talk:hover {
  color: #669999;
}

.social-links {
  margin-bottom: 0;
}

.social-links li a i {
  padding: 5px;
  color: #fafafa;
  transition: color 0.35s ease-in-out;
  -moz-transition: color 0.35s ease-in-out;
  -webkit-transition: color 0.35s ease-in-out;
  -o-transition: color 0.35s ease-in-out;
}

.social-links li a i:hover {
  color: #669999;
}

/* *-------------------- Background Images and Media Queries */

.bg-img {
  background-position: center center;
  background-attachment: scroll;
  background-repeat: no-repeat;
  background-size: cover;
}

/* * Mobile - xs */
@media screen and (max-width: 575.98px) {
  .home {
    background-image: url(../img/home/fern-bg-xs.jpg);
  }
  .about {
    background-image: url(../img/about/vinny-shaw-bg-xs.jpg);
  }
  .services {
    background-image: url(../img/contact/trees-bg-xs.jpg);
  }
  .contact {
    background-image: url(../img/contact/trees-bg-xs.jpg);
  }
}

/* * Landscape - sm */
@media screen and (min-width: 576px) and (max-width: 767px) {
  .home {
    background-image: url(../img/home/fern-bg-sm.jpg);
  }
  .menuitem {
    padding-top: 20px;
  }
  .about {
    background-image: url(../img/about/vinny-shaw-bg-sm.jpg);
  }
  .about-text {
    font-size: 0.7rem;
    margin: 20px 20px 0 72px;
  }
  /* * Gallery Carousel Images */
  .gallery-image-1 {
    background-image: url(../img/gallery/kirsten/kirsten-md.jpg);
  }
  .gallery-image-2 {
    background-image: url(../img/gallery/boots/boots-md.jpg);
  }
  .gallery-image-3 {
    background-image: url(../img/gallery/sunglasses/sunglasses-md.jpg);
  }
  .gallery-image-4 {
    background-image: url(../img/gallery/mustang/mustang-md.jpg);
  }
  .gallery-image-5 {
    background-image: url(../img/gallery/logs-in-snow/logs-in-snow-md.jpg);
  }
  .gallery-image-6 {
    background-image: url(../img/gallery/snowy-horizon/snowy-horizon-md.jpg);
  }
  /* * /Gallery Carousel Images */
  .services {
    background-image: url(../img/contact/trees-bg-sm.jpg);
  }
  .services-container {
    padding: 0 20px;
  }
  .service-title {
    font-size: 1.6rem;
    position: relative;
    top: 45%;
    -ms-transform: translateY(-45%);
    transform: translateY(-45%);
  }
  .contact {
    background-image: url(../img/contact/trees-bg-sm.jpg);
  }
  .form-container {
    margin-top: 25px;
  }
}
/* ... */

